# Linux-Process-Manager

./: Cargo.toml  README.md  build_release.sh  run_gui.sh
final/: Cargo.toml
final/src/: app.rs  display.rs  hierarchy.rs  main.rs  process.rs
src/: Linux-Process-Manager-a9b03ebe028c4a427e14f75d9c2dd78e2a2b9513.code-workspace  app.rs  change_nice.rs  disk_estimate.rs  disk_space.rs  disk_usage.rs  display.rs  gui.rs  main.rs  memory_map.rs  memory_usage.rs  process.rs  resource_control.rs  system_activity.rs  system_stats.rs
