[package]
name = "linux_process_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
tui = "0.19"
sysinfo = "0.29"
nix = "0.26"
chrono = "0.4"
libc = "0.2"
eframe = "0.23"  # egui framework
egui = "0.23"    # egui core
egui_plot = "0.23"  # For plotting CPU/memory usage
egui_extras = "0.23"  # For tables and additional widgets

[features]
default = ["gui"]
tui = []
gui = []

[[bin]]
name = "linux_process_manager"
path = "src/main.rs"

[[bin]]
name = "change_nice"
path = "src/change_nice.rs"
